# caption-inator-egui

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  config.toml.example
src/: config.rs  controls.rs  input.rs  listener.rs  main.rs  xrandr.rs
src/gui/: captions.rs  controls.rs  holding_image.rs  input.rs  mod.rs
wordlists/: infosec.txt  mathsjam.txt
