[package]
name = "egui-version"
version = "0.1.0"
edition = "2024"

[dependencies]
azure-speech = "0.10.0"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui32"] }
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
eframe = "0.32.0"
egui = "0.32.0"
env_logger = "0.11.8"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["rt", "rt-multi-thread", "net", "sync", "full"] }
tokio-stream = "0.1.17"
toml = "0.9.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
